# can_hmi_simmulator

./: .gitignore  README.md  test_ws.py
arduino/CanToSerial/: CanToSerial.ino
backend/: CMakeLists.txt  drive_log.csv
backend/src/: CanSimulator.cpp  CanSimulator.h  LogReplayer.cpp  LogReplayer.h  SerialReader.cpp  SerialReader.h  main.cpp
frontend/: index.html  main.js  style.css
scripts/: stress_test.py
